<resources>
    <string name="UnsatisfiedLinkErrorReinstallPrompt">We have detected that {GAME} has not been installed successfully. Please uninstall and redownload from Play Store.</string>
    <string name="UnsatisfiedLinkErrorReinstallPromptKunlun">We have detected that {GAME} has not been installed successfully. Please uninstall and redownload from the same Android App Store.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_id">1021507919002</string>
    <string name="app_name">Український Бравл</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="backup_api_key">AEdPqrEAAAAIcz9xZTuJinZCba7vBk9OX0r2KXu9kfVWzWN4VQ</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cadpa_text" />
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com_kakao_kakaotalk_account">with KakaoTalk</string>
    <string name="com_kakao_login_button">Kakao Login</string>
    <string name="com_kakao_other_kakaoaccount">with another KakaoAccount</string>
    <string name="com_kakao_talk_chooser_text">Which version of KakaoTalk would you like to use?</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="default_notification_channel_id">default</string>
    <string name="default_web_client_id">1021507919002-842u12vvlk7m9uheuognt5jbq18sm4re.apps.googleusercontent.com</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_app_id">374087929645848</string>
    <string name="fb_app_id">103121310241222</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://brawl-stars-63160039.firebaseio.com</string>
    <string name="gcm_defaultSenderId">1021507919002</string>
    <string name="google_api_key">AIzaSyDOrscN-wbL6qdvz1cVXdrdDxPTSgAulEI</string>
    <string name="google_app_id">1:1021507919002:android:2f04abdbe0d5a28b</string>
    <string name="google_crash_reporting_api_key">AIzaSyDOrscN-wbL6qdvz1cVXdrdDxPTSgAulEI</string>
    <string name="google_storage_bucket">brawl-stars-63160039.appspot.com</string>
    <string name="googleplay_clientid">1021507919002-f2oap2k734jsrpsf8ggvpq54trut4qu3.apps.googleusercontent.com</string>
    <string name="helpshift_apiKey">6bf7f0461f8a6aa85b9f5bbd5f5da3bd</string>
    <string name="helpshift_appId">supercell_platform_20170518081947370-bd5babfe857f569</string>
    <string name="helpshift_domain">supercell.helpshift.com</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hs__agent_message_voice_over">Message from support on %1$s</string>
    <string name="hs__agent_message_with_name_voice_over">Message from support by %1$s on %2$s</string>
    <string name="hs__app_review_button">REVIEW</string>
    <string name="hs__attach_file">Attach File</string>
    <string name="hs__attach_screenshot_btn">Attach Screenshot</string>
    <string name="hs__attachment_button_voice_over">Attach file</string>
    <string name="hs__attachment_downloaded__voice_over">File, %1$s, Double Tap to Open</string>
    <string name="hs__attachment_downloading_voice_over">File, %1$s, Downloading %2$s of %3$s</string>
    <string name="hs__attachment_name_voice_over">File, %1$s, %2$s</string>
    <string name="hs__attachment_not_downloaded_voice_over">File, %1$s, %2$s, Double Tap to Download</string>
    <string name="hs__authentication_failed">Authentication Failed</string>
    <string name="hs__ca_msg">"We're happy to help you!"</string>
    <string name="hs__change_btn">Change</string>
    <string name="hs__chat_hint">Enter your message</string>
    <string name="hs__confirmation_footer_msg">Thanks for messaging us!</string>
    <string name="hs__confirmation_msg">Did we answer all your questions?</string>
    <string name="hs__connecting">Connecting...</string>
    <string name="hs__contact_us_btn">CONTACT US</string>
    <string name="hs__conversation_detail_error">Please describe your problem</string>
    <string name="hs__conversation_end_msg">This conversation has ended.</string>
    <string name="hs__conversation_header">Conversation</string>
    <string name="hs__conversation_issue_id_header">Conversation ID : #%1$s</string>
    <string name="hs__conversation_publish_id_voice_over">Conversation ID %1$s</string>
    <string name="hs__conversation_redacted_status">Conversation Deleted</string>
    <string name="hs__conversation_redacted_status_multiple">%1$d Conversations Deleted</string>
    <string name="hs__conversation_rejected_status">Conversation Closed</string>
    <string name="hs__conversation_started_message">Your message has been received. Thanks for contacting us!</string>
    <string name="hs__conversations_divider_voice_over">Conversation ended</string>
    <string name="hs__copied_to_clipboard">Copied to clipboard</string>
    <string name="hs__copy">Copy</string>
    <string name="hs__copy_to_clipboard_tooltip">Copy to clipboard</string>
    <string name="hs__could_not_open_attachment_msg">No apps can perform this action.</string>
    <string name="hs__could_not_reach_support_msg">Unable to reach support</string>
    <string name="hs__cr_msg">What else can we help you with?</string>
    <string name="hs__csat_additonal_feedback_message">Any other feedback (optional)</string>
    <string name="hs__csat_dislike_message">Hated It!</string>
    <string name="hs__csat_like_message">Loved It!</string>
    <string name="hs__csat_message">"What's your feedback about our customer support?"</string>
    <string name="hs__csat_option_message">or</string>
    <string name="hs__csat_ratingbar">Please rate our service.</string>
    <string name="hs__done_btn">Done</string>
    <string name="hs__messages_loading_error_text">"Couldn't Load Messages."</string>
    <string name="hs__messages_loading_text">Loading Messages..</string>
    <string name="hs__network_unavailable_msg">Network not available.</string>
    <string name="hs__no_internet_error_mgs">Please check your network connection.</string>
    <string name="hs__picker_clear_query_voice_over">Clear Query</string>
    <string name="hs__picker_options_list_collapse_btn_voice_over">Collapse list</string>
    <string name="hs__picker_search_edit_back_btn_voice_over">Back</string>
    <string name="hs__picker_search_hint">Search</string>
    <string name="hs__picker_search_icon_voice_over">Search list</string>
    <string name="hs__search_title">Search</string>
    <string name="hs__send_msg_btn">Send</string>
    <string name="hs__tap_to_retry">Tap to retry.</string>
    <string name="hs__user_setup_retry_description">"We are still trying to reach support.
Please wait."</string>
    <string name="kakao_game_sdk_coppa_game_desc">This game is suitable for ages %d and up.</string>
    <string name="kakao_game_sdk_coppa_title">What’s your birthday?</string>
    <string name="kakao_game_sdk_next">Next</string>
    <string name="zinny_sdk_common_button_cancel">Cancel</string>
    <string name="zinny_sdk_common_button_ok">Confirm</string>
    <string name="zinny_sdk_coupon_popup_desc">"Please type or copy and paste
the code in the box above."</string>
    <string name="zinny_sdk_coupon_popup_title">Please enter your coupon code.</string>
    <string name="zinny_sdk_promotion_ending_popup_title">Do you want to exit from the game?</string>
</resources>