<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="?hs__searchActionButtonIcon" android:id="@id/hs__search" android:visible="false" android:title="@string/hs__search_title" app:actionLayout="@layout/hs__action_view_search" app:showAsAction="always|collapseActionView" />
    <item android:id="@id/hs__contact_us" android:visible="false" android:title="@string/hs__contact_us_btn" app:actionLayout="@layout/hs__badge_layout" app:showAsAction="always" />
    <item android:icon="?hs__searchOnNewConversationDoneActionButtonIcon" android:id="@id/hs__action_done" android:visible="false" android:title="@string/hs__done_btn" app:showAsAction="always" />
    <item android:icon="?hs__attachScreenshotActionButtonIcon" android:id="@id/hs__attach_screenshot" android:visible="false" android:title="@string/hs__attach_screenshot_btn" app:showAsAction="always" />
    <item android:icon="?hs__startConversationActionButtonIcon" android:id="@id/hs__start_new_conversation" android:visible="false" android:title="@string/hs__send_msg_btn" app:showAsAction="always" />
</menu>