<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:theme="@style/DialogTheme" android:orientation="vertical" android:background="@color/zinny_sdk_coppa_background" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/sdk_coppa_title_text_size" android:textStyle="bold" android:textColor="@color/zinny_sdk_coppa_text" android:layout_gravity="center_horizontal" android:id="@id/kakao_game_coppa_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/kakao_game_sdk_coppa_title" android:layout_centerHorizontal="true" />
    <TextView android:textSize="@dimen/sdk_coppa_desc_text_size" android:textColor="@color/zinny_sdk_coppa_text" android:layout_gravity="center_horizontal" android:id="@id/kakao_game_coppa_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sdk_coppa_text_margin" android:text="@string/kakao_game_sdk_coppa_game_desc" android:layout_centerHorizontal="true" />
    <DatePicker android:layout_gravity="center_horizontal" android:id="@id/kakao_game_coppa_datePicker" android:layout_width="fill_parent" android:layout_height="wrap_content" android:calendarViewShown="false" android:datePickerMode="spinner" />
    <Button android:layout_gravity="right" android:id="@id/kakao_game_coppa_button" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/kakao_game_sdk_next" />
</LinearLayout>