<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/zinny_sdk_popup_bg" android:layout_width="294.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ffbcbcbc" android:gravity="center" android:layout_gravity="center" android:layout_width="274.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/zinny_sdk_coupon_popup_title" />
    <EditText android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:id="@id/zinny_sdk_coupon_input_text" android:background="@drawable/popup_coupon_inputbox" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginLeft="17.0dip" android:layout_marginTop="25.0dip" android:layout_marginRight="17.0dip" android:singleLine="true" android:imeOptions="actionDone|flagNoFullscreen" />
    <TextView android:textSize="15.0sp" android:textColor="#ff787878" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="25.0dip" android:text="@string/zinny_sdk_coupon_popup_desc" android:lines="2" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="54.0dip">
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:id="@id/zinny_sdk_coupon_input_cancel" android:background="@drawable/zinny_sdk_popup_bottom_bg_left" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/zinny_sdk_common_button_cancel" android:layout_weight="1.0" />
        <View android:background="#ff272727" android:layout_width="4.0dip" android:layout_height="fill_parent" />
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:id="@id/zinny_sdk_coupon_input_submit" android:background="@drawable/zinny_sdk_popup_bottom_bg_right" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/zinny_sdk_common_button_ok" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>