<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="?android:windowBackground" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ProgressBar android:layout_gravity="center" android:id="@id/progressbar" android:layout_width="@dimen/hs__download_icon_preview_size" android:layout_height="@dimen/hs__download_icon_preview_size" android:indeterminate="true" />
    <com.helpshift.views.HSTextView android:textSize="16.0sp" android:gravity="center" android:id="@id/progress_description_text_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/hs__user_setup_retry_description" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/offline_error_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:id="@id/info_icon" android:background="@drawable/hs__error_icon" android:layout_width="44.0dip" android:layout_height="44.0dip" android:alpha="0.3" />
        <com.helpshift.views.HSTextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="?android:textColorSecondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/hs__network_unavailable_msg" />
        <com.helpshift.views.HSTextView android:textSize="16.0sp" android:textColor="?android:textColorSecondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/hs__no_internet_error_mgs" android:alpha="0.6" />
    </LinearLayout>
</LinearLayout>