<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.helpshift.views.HSTextView android:textSize="@dimen/hs__textSizeMedium" android:textColor="?android:textColorSecondary" android:gravity="center_horizontal" android:id="@id/csat_bot_message" android:paddingLeft="@dimen/activity_horizontal_margin_medium" android:paddingTop="8.0dip" android:paddingRight="@dimen/activity_horizontal_margin_medium" android:paddingBottom="@dimen/activity_horizontal_margin_small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hs__csat_message" android:layout_centerHorizontal="true" />
    <RatingBar android:id="@id/ratingBar" android:paddingTop="@dimen/activity_vertical_margin_medium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:numStars="5" android:stepSize="1.0" android:layout_below="@id/csat_bot_message" android:layout_centerHorizontal="true" android:contentDescription="@string/hs__csat_ratingbar" style="@style/Helpshift.Style.RatingBar" />
    <LinearLayout android:orientation="horizontal" android:id="@id/csat_msg_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:layout_below="@id/ratingBar" android:layout_alignLeft="@id/ratingBar" android:layout_alignRight="@id/ratingBar" android:layout_alignStart="@id/ratingBar" android:layout_alignEnd="@id/ratingBar">
        <com.helpshift.views.HSTextView android:textSize="@dimen/hs__textSizeExtraSmall" android:textColor="?android:textColorHint" android:gravity="start" android:id="@id/csat_bot_dislike_msg" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/hs__csat_dislike_message" android:layout_weight="1.0" />
        <com.helpshift.views.HSTextView android:textSize="@dimen/hs__textSizeExtraSmall" android:textColor="?android:textColorHint" android:gravity="center" android:id="@id/csat_selected_rating_msg" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <com.helpshift.views.HSTextView android:textSize="@dimen/hs__textSizeExtraSmall" android:textColor="?android:textColorHint" android:gravity="end" android:id="@id/csat_bot_like_msg" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/hs__csat_like_message" android:layout_weight="1.0" />
    </LinearLayout>
    <com.helpshift.views.HSButton android:textSize="@dimen/hs__textSizeMedium" android:gravity="center" android:id="@id/csat_sendfeedback_btn" android:padding="8.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:layout_below="@id/csat_msg_container" android:layout_centerHorizontal="true" android:textAllCaps="false" style="@style/Helpshift.Style.BorderlessButton" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/csat_bottom_separator" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_horizontal_margin_medium" android:layout_marginBottom="10.0dip" android:layout_below="@id/csat_sendfeedback_btn">
        <View android:background="?hs__separatorColor" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" />
        <com.helpshift.views.HSTextView android:id="@id/hs__csat_option" android:paddingLeft="@dimen/activity_horizontal_margin_small" android:paddingRight="@dimen/activity_horizontal_margin_small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hs__csat_option_message" />
        <View android:id="@id/option_text" android:background="?hs__separatorColor" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>