<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/hs__picker_expanded_header" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:gravity="start" android:orientation="horizontal" android:paddingLeft="@dimen/activity_vertical_margin_small" android:paddingRight="@dimen/activity_vertical_margin_small" android:layout_width="fill_parent" android:layout_height="@dimen/hs__picker_header_container_height" android:paddingStart="@dimen/activity_vertical_margin_small" android:paddingEnd="@dimen/activity_vertical_margin_small"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageView android:layout_gravity="center" android:id="@id/hs__picker_action_collapse" android:padding="@dimen/hs__picker_icon_padding" android:layout_width="@dimen/hs__picker_header_icon_width" android:layout_height="@dimen/hs__picker_header_icon_height" android:src="@drawable/hs__collapse" android:scaleType="center" android:layout_centerVertical="true" android:contentDescription="@string/hs__picker_options_list_collapse_btn_voice_over" />
        <ImageView android:layout_gravity="center" android:id="@id/hs__picker_action_back" android:padding="@dimen/hs__picker_icon_padding" android:visibility="gone" android:layout_width="@dimen/hs__picker_header_icon_width" android:layout_height="@dimen/hs__picker_header_icon_height" android:src="@drawable/hs__back" android:scaleType="center" android:layout_centerVertical="true" android:contentDescription="@string/hs__picker_search_edit_back_btn_voice_over" />
        <com.helpshift.views.HSTextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="?android:textColorPrimary" android:ellipsize="end" android:id="@id/hs__expanded_picker_header_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:maxLines="1" android:layout_toLeftOf="@id/hs__picker_action_search" android:layout_toRightOf="@id/hs__picker_action_collapse" android:layout_centerVertical="true" android:layout_marginStart="16.0dip" />
        <com.helpshift.views.HSEditText android:textSize="18.0sp" android:textColor="?android:textColorPrimary" android:textColorHint="?android:textColorSecondary" android:id="@id/hs__picker_header_search" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:hint="@string/hs__picker_search_hint" android:maxLines="1" android:layout_toLeftOf="@id/hs__picker_action_clear" android:layout_toRightOf="@id/hs__picker_action_back" android:layout_centerVertical="true" android:inputType="textCapSentences" android:imeOptions="actionSearch" android:layout_marginStart="16.0dip" />
        <ImageView android:id="@id/hs__picker_action_search" android:padding="@dimen/hs__picker_icon_padding" android:layout_width="@dimen/hs__picker_header_icon_width" android:layout_height="@dimen/hs__picker_header_icon_height" android:src="@drawable/hs__picker_search" android:scaleType="center" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/hs__picker_search_icon_voice_over" android:layout_alignParentEnd="true" />
        <ImageView android:id="@id/hs__picker_action_clear" android:padding="@dimen/hs__picker_icon_padding" android:visibility="gone" android:layout_width="@dimen/hs__picker_header_icon_width" android:layout_height="@dimen/hs__picker_header_icon_height" android:src="@drawable/hs__close" android:scaleType="center" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/hs__picker_clear_query_voice_over" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <View android:layout_gravity="bottom" android:id="@id/hs__picker_expanded_shadow" android:layout_width="fill_parent" android:layout_height="@dimen/hs__picker_top_shadow_height" app:layout_anchor="@id/hs__picker_collapsed_header" />
</FrameLayout>